Allow Cluster editor open on crc or sandbox page
Signed-off-by: Denis Golovin dgolovin@redhat.com

--- a/src/webview/cluster/app/index.html
+++ b/src/webview/cluster/app/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
     <head>
         <base href="%BASE_URL%" />
+        <script>
+            window.startingPage = '%STARTING_PAGE%';
+        </script>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Config View</title>
