--- a/src/webview/create-component/app/index.html
+++ b/src/webview/create-component/app/index.html
@@ -6,7 +6,7 @@
         <% } %>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Git Import</title>
+        <title>Create component</title>
         <!-- meta http-equiv="Content-Security-Policy" -->
         <style>
             html,
