--- a/src/webview/git-import/app/index.html
+++ b/src/webview/git-import/app/index.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <% if (production) { %>
         <base href="%BASE_URL%" />
-        <% } %>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Git Import</title>
@@ -48,5 +46,7 @@
     </head>
     <body>
         <div class="box" id="root"></div>
+        <script src="%SCRIPT%" ></script>
+        <link rel="stylesheet" href="%STYLE%"></link>
     </body>
 </html>
