--- a/src/webview/describe/app/index.html
+++ b/src/webview/describe/app/index.html
@@ -39,5 +39,7 @@
     </head>
     <body>
         <div class="box" id="root"></div>
+        <script src="%SCRIPT%" ></script>
+        <link rel="stylesheet" href="%STYLE%"></link>
     </body>
 </html>
