--- a/src/webview/survey/app/index.html
+++ b/src/webview/survey/app/index.html
@@ -1,55 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <% if (production) { %>
+    <head>
         <base href="%BASE_URL%" />
-        <% } %>
-            <meta charset="UTF-8" />
-            <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-            <title>Feedback</title>
-            <!-- meta http-equiv="Content-Security-Policy" -->
-            <style>
-                html,
-                body {
-                    padding: 0;
-                    overflow: visible;
-                }
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Feedback</title>
+        <!-- meta http-equiv="Content-Security-Policy" -->
+        <style>
+            html,
+            body {
+                padding: 0;
+                overflow: visible;
+            }
 
-                body.vscode-light {
-                    color: black;
-                }
+            body.vscode-light {
+                color: black;
+            }
 
-                body.vscode-dark {
-                    color: white;
-                }
+            body.vscode-dark {
+                color: white;
+            }
 
-                body.vscode-high-contrast {
-                    color: red;
-                }
+            body.vscode-high-contrast {
+                color: red;
+            }
 
-                .box {
-                    display: flex;
-                    flex-flow: column;
-                    position: absolute;
-                    top: 0px;
-                    bottom: 1px;
-                    left: 0px;
-                    right: 0px;
-                }
+            .box {
+                display: flex;
+                flex-flow: column;
+                position: absolute;
+                top: 0px;
+                bottom: 1px;
+                left: 0px;
+                right: 0px;
+            }
 
-                .box .row.header {
-                    flex: 0 1 auto;
-                }
+            .box .row.header {
+                flex: 0 1 auto;
+            }
 
-                .box .row.content {
-                    flex: 1 1 auto;
-                }
-            </style>
-</head>
-
-<body>
-    <div class="box" id="root"></div>
-</body>
-
+            .box .row.content {
+                flex: 1 1 auto;
+            }
+        </style>
+    </head>
+    <body>
+        <div class="box" id="root"></div>
+        <script src="%SCRIPT%" ></script>
+        <link rel="stylesheet" href="%STYLE%"></link>
+    </body>
 </html>
