--- a/src/webview/feedback/app/index.html
+++ b/src/webview/feedback/app/index.html
@@ -4,7 +4,7 @@
         <base href="%BASE_URL%" />
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Feedback</title>
+        <title>Share Feedback</title>
         <!-- meta http-equiv="Content-Security-Policy" -->
         <style>
             html,
