--- a/src/webview/create-component/app/index.html
+++ b/src/webview/create-component/app/index.html
@@ -6,6 +6,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Create Component</title>
         <!-- meta http-equiv="Content-Security-Policy" -->
+        <script>
+            if (typeof acquireVsCodeApi !== 'undefined') {
+                window.vscodeApi = acquireVsCodeApi();
+            }
+        </script>
         <style>
             html,
             body {
