--- a/src/webview/devfile-registry/app/index.html
+++ b/src/webview/devfile-registry/app/index.html
@@ -6,6 +6,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Devfile Registry</title>
         <!-- meta http-equiv="Content-Security-Policy" -->
+        <script>
+            if (typeof acquireVsCodeApi !== 'undefined') {
+                window.vscodeApi = acquireVsCodeApi();
+            }
+        </script>
         <style>
             html,
             body {
@@ -47,6 +52,5 @@
     <body>
         <div class="box" id="root"></div>
         <script src="%SCRIPT%" ></script>
-        <link rel="stylesheet" href="%STYLE%"></link>
     </body>
 </html>
