New create component UI (#3064)
* Create component options view
* UI consistency (see notes)

In order for all pages of the wizard to be more consistent:
- use `<Container />` as parent for all components,
  so that all the pages are the same width
- all page titles are left justified
- `5em` of margin at the top of each page

* Delete existing 'create component' parts
- Delete the quick pick based create component
- Delete the 'git import' workflow
- Replace the devfile registry viewer with the one contributed in create
  component
- Fix a few bugs I found:
  - If you add staging devfile registry, enable/disable repeatedly in devfile search, list of items will grow

- Clear field button for search field in devfile search
- Select the template project by default if there is only one
  - Handle the case that there are no template projects
- Prepopulate the component name field based on the git url or template project name
- Focus existing Create Component webview instead of opening a second instance
  - There are issues with how message passing is handled if multiple instances of Create Component are running
- Make devfile search scale better when zooming

* Telemetry for create component wizard

Signed-off-by: Jessica He <jhe@redhat.com>
Signed-off-by: David Thompson <davthomp@redhat.com>
Co-authored-by: Jessica He <jhe@redhat.com>

--- a/src/webview/create-component/app/index.html
+++ b/src/webview/create-component/app/index.html
@@ -4,8 +4,13 @@
         <base href="%BASE_URL%" />
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Git Import</title>
+        <title>Create Component</title>
         <!-- meta http-equiv="Content-Security-Policy" -->
+        <script>
+            if (typeof acquireVsCodeApi !== 'undefined') {
+                window.vscodeApi = acquireVsCodeApi();
+            }
+        </script>
         <style>
             html,
             body {
@@ -47,6 +52,5 @@
     <body>
         <div class="box" id="root"></div>
         <script src="%SCRIPT%" ></script>
-        <link rel="stylesheet" href="%STYLE%"></link>
     </body>
 </html>
